# totem-plugin-delete-play

./: GettingStarted.md  Makefile.in  ProjectHome.md  configure
autom4te.cache/: output.1  traces.0  traces.3
src/: delete-play.c  delete-play.plugin
trunk/: Makefile.am  Makefile.in  NEWS  README  configure  configure.ac
trunk/autom4te.cache/: requests  traces.2
trunk/src/: Makefile.am  Makefile.in
wiki/: GettingStarted.wiki
